# text-me-assistant

./: .env.example  .gitignore  README.md  checklist.md  env.json.example  package-lock.json  package.json  postman_collection.json  postman_environment.json  pyproject.toml  samconfig.toml  template.yaml
.github/workflows/: postman-tests.yaml
docs/: message_flow.md  temp.md
src/: models.py
src/functions/escalate/: index.js  index.mjs  package-lock.json  package.json
src/functions/message/: index.js  index.mjs  package-lock.json  package.json  qa.js
src/sagemaker/: package.json  setup.mjs
