[project]
name = "text-me-assistant"
version = "0.1.0"
description = "Reduce constant staff interruptions by replacing direct texts with a smart virtual assistant"
authors = [
    {name = "Joshua Segal", email = "segalsfly@gmail.com"}
    {name = "Milo Margolis", email = "milomargolis4@gmail.com"}
]
dependencies = [
    "openai>=1.0.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=text_me_assistant --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 